# cloco-1

./: README.md  pyproject.toml
hello_django/: db.sqlite3
hello_django/hello_django/: settings.py  urls.py
hello_django/users/: models.py  serailizer.py  urls.py  views.py
hello_django/users/migrations/: 0001_initial.py  0002_customuser_eid_customuser_ename_customuser_esalary_and_more.py  0003_remove_customuser_password.py
